# codex-usage-tracker

./: .gitignore  AGENTS.md  README.md  build_backend.py  pyproject.toml
.codex/rules/: default.rules
docs/: data-collection.md  data.md  milestones.md  research.md  schema.md  testing-milestone.md  upgrade-features.md
docs/ui/: 00-product-brief.md  01-tech-stack.md  02-design-system.md  03-app-shell-and-navigation.md  04-data-state-contract.md  05-components-catalog.md  06-milestones.md  07-acceptance-checklist.md  08-backend-api.md
docs/ui/pages/: context-limits.md  hotspots.md  overview.md  sessions-debug.md  tools.md
scripts/: install.sh  package.sh
src/codex_usage_tracker/: app_server.py  cli.py  config.py  hash_utils.py  insights.py  parser.py  pdf_report.py  platform.py  pricing_cli.py  report.py  rollout.py  rollout_backup.py  store.py  sync_runner.py  web_app.py
tests/: test_app_server_ingest.py  test_cli_integration.py  test_cli_web_port.py  test_ingest_rollouts.py  test_parser_status.py  test_parser_token_usage.py  test_pricing_models.py  test_report.py  test_rollout_backup.py  test_rollout_parse.py  test_status_parser.py
ui/: next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts
ui/app/: globals.css  layout.tsx  loading.tsx  page.tsx
ui/app/context/: page.tsx
ui/lib/: api.ts  charts.ts  data.ts  export.ts  filters.ts  format.ts  nav.ts  pricing.ts  timezone.ts  utils.ts
ui/test-results/: .last-run.json
ui/tests/: advanced.spec.ts  api-contract.spec.ts  global-setup.ts  screenshots.spec.ts  smoke.spec.ts
(+117 files in other folders)
